--- a/DNA_3.0.1.html
+++ b/DNA_3.0.1.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/dna3.0.1" data-prefixo="dna3.0.1" data-total="47" data-whatsapp-msg="Olá! Vi o apartamento de frente ao mar no Reserva DNA e gostaria de saber se ele está disponível para as datas [xx/xx - xx/xx]. Pode me passar mais informações?">
+<body data-pasta="assets/img/dna3.0.1" data-prefixo="dna3.0.1" data-total="47" data-whatsapp-msg="Olá! Tenho interesse no apê 3.0.1 no Reserva DNA. Ele está disponível para o período [xx/xx - xx/xx]?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
