--- a/DNA_9.2.3.html
+++ b/DNA_9.2.3.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/dna9.2.3" data-prefixo="dna9.2.3" data-total="47" data-whatsapp-msg="Olá! Vi o apartamento de frente ao mar no Reserva DNA e gostaria de saber se ele está disponível para as datas [xx/xx - xx/xx]. Pode me passar mais informações?">
+<body data-pasta="assets/img/dna9.2.3" data-prefixo="dna9.2.3" data-total="47" data-whatsapp-msg="Oi! Estou vendo o apartamento 9.2.3 no Reserva DNA. Pode me confirmar a disponibilidade para [xx/xx - xx/xx]?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
