--- a/DNA_13.1.4.html
+++ b/DNA_13.1.4.html
@@ -128,5 +128,17 @@
         <img id="modalImage" src="about:blank" alt="Imagem ampliada" />
       </div>
     </div>
+    <div id="footer"></div>
+    <script>
+      fetch("partials/footer.html")
+        .then((res) => res.text())
+        .then((data) => {
+          document.getElementById("footer").innerHTML = data;
+
+          const scriptBt = document.createElement("script");
+          scriptBt.src = "assets/js/backtotop.js";
+          document.body.appendChild(scriptBt);
+        });
+    </script>
   </body>
 </html>
