--- a/DNA_10.4.2.html
+++ b/DNA_10.4.2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
   <body
     data-pasta="assets/img/dna1042"
     data-prefixo="dna1042"
-    data-total="53"
+    data-total="50"
     data-whatsapp-msg="Olá! Vi o apartamento 10.4.2 no Reserva DNA (2 suítes) e gostaria de saber se ele está livre para as datas [xx/xx - xx/xx]."
   >
     <div id="header"></div>
