--- a/DNA_13.1.4.html
+++ b/DNA_13.1.4.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
   <body
     data-pasta="assets/img/dna1314"
     data-prefixo="dna1314"
-    data-total="53"
+    data-total="49"
     data-whatsapp-msg="Olá! Vi o apartamento de frente ao mar no Reserva DNA (13.1.4) e gostaria de saber se ele está disponível para as datas [xx/xx - xx/xx]. Pode me passar mais informações?"
   >
     <div id="header"></div>
