--- a/DNA_9.2.3.html
+++ b/DNA_9.2.3.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
   <body
     data-pasta="assets/img/dna923"
     data-prefixo="dna923"
-    data-total="47"
+    data-total="45"
     data-whatsapp-msg="Oi! Estou vendo o apartamento 9.2.3 no Reserva DNA. Pode me confirmar a disponibilidade para [xx/xx - xx/xx]?"
   >
     <div id="header"></div>
