--- a/DNA_13.1.4.html
+++ b/DNA_13.1.4.html
@@ -66,23 +66,35 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">2 suítes espaçosas 🛏️</span>
-            <span class="badge">Cozinha completa 🍽️</span>
-            <span class="badge">Sacada gourmet com vista 🌿</span>
-            <span class="badge">2 vagas cobertas 🚗</span>
-            <span class="badge">Até 6 pessoas 👨‍👩‍👧</span>
-            <span class="badge destaque">Ideal para famílias ☀️</span>
+            <span class="badge">🛏️ 2 suítes climatizadas</span>
+            <span class="badge">🛜 Wi-Fi disponível</span>
+            <span class="badge">🍽️ Cozinha completa</span>
+            <span class="badge">🌿 Sacada gourmet com vista</span>
+            <span class="badge">🚗 2 vagas cobertas</span>
+            <span class="badge">👨‍👩‍👧 Acomoda até 6 pessoas</span>
+            <span class="badge destaque">☀️ Ideal para famílias</span>
           </div>
         </div>
 
         <div class="badge-block">
           <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Piscina, sauna e deck panorâmico 🏊‍♂️</span>
-            <span class="badge">Academia, cinema e jogos 🎮</span>
-            <span class="badge">Espaço infantil 🧸</span>
-            <span class="badge">Boulevard com comércio ☕</span>
-            <span class="badge destaque">Mais de 7 mil m² de natureza 🌴</span>
+            <span class="badge">🌊 Frente ao mar</span>
+            <span class="badge"
+              >🛒 Boulevard com mercado, padaria e cafeteria</span
+            >
+            <span class="badge">🌅 Deck panorâmico com vista para o mar</span>
+            <span class="badge">🏖️ Piscina incrível no terraço</span>
+            <span class="badge">🔥 Piscina aquecida</span>
+            <span class="badge">🧖‍♀️ Saunas, ofurô e salão de jogos</span>
+            <span class="badge">💪 Academia com vista para a praia</span>
+            <span class="badge">🎬 Cinema e brinquedoteca</span>
+            <span class="badge">👶 Espaço infantil</span>
+            <span class="badge">🌇 Cobertura perfeita para caminhadas</span>
+
+            <span class="badge destaque"
+              >🌴 Mais de 7 mil m² de natureza preservada</span
+            >
           </div>
         </div>
       </div>
