--- a/DNA_9.2.3.html
+++ b/DNA_9.2.3.html
@@ -66,25 +66,35 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">1 suíte com Smart TV 🛏️📺</span>
-            <span class="badge">Cozinha completa 🍽️</span>
-            <span class="badge">Varanda gourmet 🌅</span>
-            <span class="badge">Sofá-cama na sala 🛋️</span>
-            <span class="badge">Wi-Fi e ar-condicionado 📶❄️</span>
-            <span class="badge">Até 4 pessoas 👨‍👩‍👧‍👦</span>
-            <span class="badge destaque">1 vaga coberta na garagem 🚗</span>
+            <span class="badge">🛏️ 1 suíte climatizada</span>
+            <span class="badge">🍽️ Cozinha completa</span>
+            <span class="badge">🌅 Varanda gourmet com churrasqueira</span>
+            <span class="badge">📶❄️ Wi-Fi e ar-condicionado</span>
+            <span class="badge">👨‍👩‍👧‍👦 Acomoda até 4 pessoas</span>
+            <span class="badge">🛋️ Sofá-cama na sala</span>
+            <span class="badge destaque">🚗 1 vaga coberta na garagem</span>
           </div>
         </div>
 
         <div class="badge-block">
           <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Frente ao mar 🌊</span>
+            <span class="badge">🌊 Frente ao mar</span>
             <span class="badge"
-              >Boulevard com mercado, padaria e cafeteria ☕</span
+              >🛒 Boulevard com mercado, padaria e cafeteria</span
             >
-            <span class="badge">7 mil m² de floresta preservada 🌳</span>
-            <span class="badge destaque">Sua melhor estadia em Ubatuba ✨</span>
+            <span class="badge">🌅 Deck panorâmico com vista para o mar</span>
+            <span class="badge">🏖️ Piscina incrível no terraço</span>
+            <span class="badge">🔥 Piscina aquecida</span>
+            <span class="badge">🧖‍♀️ Saunas, ofurô e salão de jogos</span>
+            <span class="badge">💪 Academia com vista para a praia</span>
+            <span class="badge">🎬 Cinema e brinquedoteca</span>
+            <span class="badge">👶 Espaço infantil</span>
+            <span class="badge">🌇 Cobertura perfeita para caminhadas</span>
+
+            <span class="badge destaque"
+              >🌴 Mais de 7 mil m² de natureza preservada</span
+            >
           </div>
         </div>
       </div>
