--- a/DNA_3.0.1.html
+++ b/DNA_3.0.1.html
@@ -72,10 +72,10 @@
               >🌅 Varanda gourmet com deck e churrasqueira</span
             >
             <span class="badge">📶❄️ Wi-Fi e ar-condicionado</span>
+            <span class="badge">🚗 1 vaga de garagem coberta</span>
             <span class="badge">👨‍👩‍👧‍👦 Acomoda até 4 pessoas</span>
-            <span class="badge destaque"
-              >🐶 Pet de pequeno porte é bem-vindo</span
-            >
+            <span class="badge">🐶 Pet de pequeno porte é bem-vindo</span>
+            <span class="badge destaque">☀️ Ideal para famílias</span>
           </div>
         </div>
 
