--- a/DNA_9.2.3.html
+++ b/DNA_9.2.3.html
@@ -70,9 +70,10 @@
             <span class="badge">🍽️ Cozinha completa</span>
             <span class="badge">🌅 Varanda gourmet com churrasqueira</span>
             <span class="badge">📶❄️ Wi-Fi e ar-condicionado</span>
+            <span class="badge">🚗 1 vaga de garagem coberta</span>
             <span class="badge">👨‍👩‍👧‍👦 Acomoda até 4 pessoas</span>
             <span class="badge">🛋️ Sofá-cama na sala</span>
-            <span class="badge destaque">🚗 1 vaga coberta na garagem</span>
+            <span class="badge destaque">☀️ Ideal para famílias</span>
           </div>
         </div>
 
